--- a/src/javascript/02-functions/16-debugging-tools/16-debugging-tools.mdx
+++ b/src/javascript/02-functions/16-debugging-tools/16-debugging-tools.mdx
@@ -341,6 +341,8 @@ Always make sure you remove those `debugger;` calls from your code once you are 
 
 We talked about scope earlier. Scope will allow us to peer into what variables are, we will look at that more in the next video.
 
+## Network Request
+
 The next one is Network Request.
 
 This is useful if you want to see what is being fired off when you load the page. If you go to your networks tab and refresh `debugging.html`, you will see all of the different files that are needed in order for the page to work.
